--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <nav claas="menu">
                 <div>&#128512</div>
-                <ul>
+                <ul class="menu-list">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Produtos</a>
                         <ul>
